<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/main_text_1" />

    <Button
        android:id="@+id/main_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_1" />

    <TextView
        android:id="@+id/main_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_2" />

    <Button
        android:id="@+id/main_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_1" />

    <TextView
        android:id="@+id/main_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_3" />

    <Button
        android:id="@+id/main_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_1" />

    <TextView
        android:id="@+id/main_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_4" />

    <Button
        android:id="@+id/main_btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_1" />

    <TextView
        android:id="@+id/main_text_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_5" />

    <Button
        android:id="@+id/main_btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_1" />

</LinearLayout>